--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,12 @@ services:
     image: nats
     ports:
       - "8222:8222"
+  
+  database:
+    image: postgres:16.9-alpine3.21
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_DB}
+    ports:
+      - "${DB_PORT}:5432"
