--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       POSTGRES_DB: ${DB_DB}
     ports:
       - "${DB_PORT}:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
   
   client-gateway-ms:
     build: ./client-gateway-ms/
