chore: Update submodules client-gateway-ms, documents-generator, and staffing-ms to latest commits e953d4d, 48cb261, and d15691d respectively; add debug configuration for documents-generator in VS Code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -63,6 +63,22 @@
       ],
       "console": "integratedTerminal",
       "restart": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "DG MS",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "cwd": "${workspaceFolder}/documents-generator",
+      "runtimeExecutable": "pnpm",
+      "runtimeArgs": [
+        "run",
+        "dc:dev"
+      ],
+      "console": "integratedTerminal",
+      "restart": true
     }
   ]
 }
